<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context="com.appdomain.imagelock.Login"
    tools:layout_editor_absoluteY="25dp">

    <ProgressBar
        android:id="@+id/loginProgressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="300px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/loginForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:paddingTop="6dp"
            android:paddingBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <EditText
                    android:id="@+id/usernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:inputType="textVisiblePassword"
                    android:textSize="14dp"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:textColor="@color/colorAccent" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:textSize="14dp"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:textColor="@color/colorAccent" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <EditText
                    android:id="@+id/retypePasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/retype_password"
                    android:inputType="textPassword"
                    android:textSize="14dp"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:textColor="@color/colorAccent" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1.0"
                tools:layout_editor_absoluteX="14dp"
                tools:layout_editor_absoluteY="373dp">

                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/white_fill_gray_outline"
                    android:elevation="4dp"
                    android:text="@string/action_login"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/signUpBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="0.5"
                    android:background="@color/darkGrey"
                    android:elevation="4dp"
                    android:text="@string/action_sign_up"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/loginProgressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:visibility="gone" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp">

            <LinearLayout
                android:id="@+id/loginForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="24dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp">

                        <EditText
                            android:id="@+id/usernameEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_username"
                            android:inputType="text"
                            android:textColor="@color/colorAccent"
                            android:maxLength="20"
                            android:maxLines="1" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp">

                        <EditText
                            android:id="@+id/passwordEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:inputType="textPassword"
                            android:textColor="@color/colorAccent"
                            android:maxLength="20"
                            android:maxLines="1" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp">

                        <EditText
                            android:id="@+id/retypePasswordEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/retype_password"
                            android:inputType="textPassword"
                            android:textColor="@color/colorAccent"
                            android:maxLength="20"
                            android:maxLines="1" />

                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_marginTop="8dp"
                        android:weightSum="1.0">

                        <Button
                            android:id="@+id/loginBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/white_fill_gray_outline"
                            android:elevation="4dp"
                            android:text="@string/action_login"
                            android:textColor="@color/colorAccent"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:layout_margin="3dp"
                            android:layout_weight="0.5"/>

                        <Button
                            android:id="@+id/signUpBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:elevation="4dp"
                            android:background="@color/darkGrey"
                            android:text="@string/action_sign_up"
                            android:textColor="@color/colorAccent"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:layout_margin="3dp"
                            android:layout_weight="0.5"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>-->

</android.support.constraint.ConstraintLayout>
